--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,11 @@
             <artifactId>flying-saucer-pdf</artifactId>
             <version>9.1.22</version>
         </dependency>
+		<dependency>
+			<groupId>org.apache.pdfbox</groupId>
+			<artifactId>pdfbox</artifactId>
+			<version>2.0.31</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
