configuracao banco nuvem pos

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,31 +1,48 @@
+# ===============================================================
+# NOME DA APLICACAO
+# ===============================================================
 spring.application.name=sistema_estudante
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/sistema_estudante
-spring.datasource.username=nosso
-spring.datasource.password=senha
-spring.datasource.driver-class-name=org.postgresql.Driver
+# ===============================================================
+# CONFIGURACAO DO BANCO DE DADOS (RENDER) - MODO DIRETO
+# ===============================================================
+# URL de conexao completa, incluindo o host, porta, nome do banco e o parametro SSL.
+spring.datasource.url=jdbc:postgresql://dpg-d251opvdiees739qj0o0-a.oregon-postgres.render.com:5432/dbcantinho?sslmode=require
 
+# Usuario do banco de dados
+spring.datasource.username=user
+
+# Senha do banco de dados
+spring.datasource.password=28MOeHgisbga7iBu6WfXeIwJorKdUUk9
+
+# ===============================================================
+# CONFIGURACAO DO JPA/HIBERNATE
+# ===============================================================
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-#spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-
-
-
-
-
+# ===============================================================
+# CONFIGURACOES DE SEGURANCA (JWT)
+# ===============================================================
 application.security.jwt.secret-key=O3deCIwpL68msJftgHIhCRD7c8cdXohZPPP8EtzLSxs=
 application.security.jwt.expiration=86400000
 
+# ===============================================================
+# CONFIGURACOES DO MAILGUN
+# ===============================================================
 mailgun.api.key=c71bf8c51b2950c396434024eb803b1d-0ce15100-f7f15e3c
 mailgun.domain=sandboxc5b503f7480141568d693b1f1066e8e7.mailgun.org
 mailgun.from.email=postmaster@sandboxc5b503f7480141568d693b1f1066e8e7.mailgun.org
 
+# ===============================================================
+# URL DO FRONTEND (PARA CONFIGURACAO DE CORS)
+# ===============================================================
 app.frontend.url=http://localhost:5173
 
+# ===============================================================
+# LOGGING
+# ===============================================================
 logging.level.org.springframework.security=DEBUG
-
-
 logging.level.com.example.sistema_estudante.security=DEBUG
 logging.level.io.jsonwebtoken=DEBUG
