--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,8 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>3.5.3</version>
-		<relativePath/> </parent>
+		<relativePath/> 
+	</parent>
 	<groupId>com.sistema_estudante</groupId>
 	<artifactId>sistema_estudante</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
@@ -50,6 +51,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.postgresql</groupId>
