--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,19 +7,24 @@ spring.application.name=sistema_estudante
 # CONFIGURACAO DO BANCO DE DADOS (RENDER) - MODO DIRETO
 # ===============================================================
 # URL de conexao completa, incluindo o host, porta, nome do banco e o parametro SSL.
-spring.datasource.url=jdbc:postgresql://dpg-d251opvdiees739qj0o0-a.oregon-postgres.render.com:5432/dbcantinho?sslmode=require
+spring.datasource.url=jdbc:postgresql://dpg-d30rjtnfte5s73ep76hg-a.oregon-postgres.render.com:5432/dbcantinho_ozcn?sslmode=require
 
 # Usuario do banco de dados
 spring.datasource.username=user
 
 # Senha do banco de dados
-spring.datasource.password=28MOeHgisbga7iBu6WfXeIwJorKdUUk9
+spring.datasource.password=2TdGfZf6LMGbykhDnZ8DZoKCr32FY7WN
 
 # ===============================================================
 # CONFIGURACAO DO JPA/HIBERNATE
 # ===============================================================
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# MUDANCA CRITICA: ALTERADO PARA 'create'.
+# 'create': Apaga o banco de dados existente e o recria do zero a cada inicializacao.
+# Isso garante que a coluna 'perfil_alvo' sera criada corretamente.
 spring.jpa.hibernate.ddl-auto=update
+
 spring.jpa.show-sql=true
 
 # ===============================================================
@@ -29,11 +34,16 @@ application.security.jwt.secret-key=O3deCIwpL68msJftgHIhCRD7c8cdXohZPPP8EtzLSxs=
 application.security.jwt.expiration=86400000
 
 # ===============================================================
-# CONFIGURACOES DO MAILGUN
+# CONFIGURACOES DE E-MAIL
 # ===============================================================
-mailgun.api.key=c71bf8c51b2950c396434024eb803b1d-0ce15100-f7f15e3c
-mailgun.domain=sandboxc5b503f7480141568d693b1f1066e8e7.mailgun.org
-mailgun.from.email=postmaster@sandboxc5b503f7480141568d693b1f1066e8e7.mailgun.org
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=ytmesjajaneiro@gmail.com
+spring.mail.password=chvsbidghyyaovgo 
+
+# Propriedades adicionais do JavaMail
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
 
 # ===============================================================
 # URL DO FRONTEND (PARA CONFIGURACAO DE CORS)
@@ -46,3 +56,4 @@ app.frontend.url=http://localhost:5173
 logging.level.org.springframework.security=DEBUG
 logging.level.com.example.sistema_estudante.security=DEBUG
 logging.level.io.jsonwebtoken=DEBUG
+
