--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,7 +23,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 # MUDANCA CRITICA: ALTERADO PARA 'create'.
 # 'create': Apaga o banco de dados existente e o recria do zero a cada inicializacao.
 # Isso garante que a coluna 'perfil_alvo' sera criada corretamente.
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
 spring.jpa.show-sql=true
 
